{
    "name": "GameControls",
    "maps": [
        {
            "name": "Touch",
            "id": "413f61a8-f618-4464-8582-4c342970b565",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "8066d5e8-0c6f-4df3-887a-ac0b6a654c07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9eacce50-c236-46b4-a161-3acea9a5ed10",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "ef18dbeb-7993-4016-962d-e6b3c7bb8aa1",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "2467f7a1-3b28-4230-840d-edfb79f31448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "44be9209-aa9c-4adf-a2cf-8b0b6be7c56c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "e520b68f-1ab2-44b9-9a81-d398c4210459",
            "actions": [
                {
                    "name": "RestartGame",
                    "type": "Button",
                    "id": "a4dc8c9f-a2f9-40f4-8e09-cd6b4a123760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoalAnim",
                    "type": "Button",
                    "id": "afe4c6dd-62d5-4b0c-9487-2a086eb1ef8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0a7601d-0ee8-476f-90e4-e3101e34904a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4cc0782-6e44-4fcf-b3d2-0d9456f500fc",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoalAnim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}